--- a/style.css
+++ b/style.css
@@ -3,15 +3,15 @@ body {
 }
 h1 {
   color: MediumSeaGreen;
-  text-align:center;
-  font-size:300;
+  text-align: center;
+  font-size: 200%;
 }
 p {
   color: Orange;
-  text-align:center;
+  text-align: center;
 }
 button {
   color: Orange;
-  text-align:center;
+  text-align: center;
   margin: 30px;
 }
