--- a/style1.css
+++ b/style1.css
@@ -1,7 +1,7 @@
 body {
   background-color: RGB(140,0,0);
 }
-h1 {
+.ran {
   color: Yellow;
   text-align: center;
 margin: 20px;
@@ -15,4 +15,51 @@ p {
 font-size:135%;
 color: White;
 
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111;
+}
+
+#fixh {
+  color: MediumSeaGreen;
+  text-align: center;
+  font-size: 200%;
+  font-family:Verdana;
+}
+address {
+color: white;
+}
+ h3 {
+color: white;
+}
+
+#fixp {
+  color: Orange;
+  text-align: center;
+  font-size: 140%;
+  margin: 10px;
+ 
+}
+blockquote {
+color: white;
 }
