--- a/style4.css
+++ b/style4.css
@@ -25,7 +25,7 @@
     color: white;
     }
     div {
-    align: center;
+    text-align: center;
     }
     body {
     background-color: RGB(140,0,0);
@@ -90,6 +90,7 @@
       text-align: center;
       font-size: 200%;
       font-family:Verdana;
+      text-shadow:1px 1px 4px yellowgreen ;
     }
     address {
     color: white;
